Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-2774

Stylesheets: Cannot change width/height of QMainWindow separator

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.7.0
    • 4.4.1
    • Widgets: Style Sheets
    • None
    • 692e9103ebb85b90e79377206d5d03b704d43d42

      The documentation states the separator of a QMainWindow can be styled using the following style sheet:

      QMainWindow::separator

      { background: yellow; width: 10px; height: 10px; }

      However, the width/height properties seem to have no effect.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            goffart Olivier Goffart (closed Nokia identity) (Inactive)
            jabarron Jason Barron
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes