QMainWindow: update the separator size when the style change

Task-number: QTBUG-2774
Reviewed-ny: Thierry